[package]
name = "guiver-examples"
version = "0.1.0"
authors = ["Lennart Kudling"]
categories = ["gui"]
description = "GUI programming with Piet"
documentation = "https://docs.rs/guiver_piet"
edition = "2021"
keywords = ["immediate", "widget"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
guiver = { path="../guiver" }
guiver-piet = { path="../guiver-piet" }
