[package]
name = "guiver-wasm-example"
version = "0.1.0"
authors = ["Lennart Kudling"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
console_error_panic_hook = "0.1"
#guiver-wasm = { path="../" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
