[package]
name = "guiver"
version = "0.1.0"
authors = ["Lennart Kudling"]
categories = ["gui"]
description = "GUI programming with Piet"
documentation = "https://docs.rs/guiver"
edition = "2021"
keywords = ["immediate", "widget"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]

# Druid 0.7.0 depends on the old Piet 0.3.2
druid-shell = { git = "https://github.com/linebender/druid.git" }
# druid-shell = "^0"
